SimpleHeap添加jvm参数：-XX:+PrintGCDetails